# tinytorch

./: ReadMe.md
docs/: api.md
tests/: CMakeLists.txt  test_tinytorch.cpp
tinytorch/: tinytorch.cpp  tinytorch.h  torch_to_tiny.py
